--- a/Products.html
+++ b/Products.html
@@ -36,7 +36,7 @@
     <div class="product-grid">
         <div class="product-preview">
             <div class="thumbnail-row">
-                <img src="New folder/Thumbnail 6.jpg" class="thumbnail">
+                <img src="Thumbnail.jpg" class="thumbnail">
             </div>
             <div class="product-info">
                 <p>
@@ -46,7 +46,7 @@
         </div>
         <div class="product-preview">
             <div class="thumbnail-row">
-                <img src="New folder/Thumbnail 6.jpg" class="thumbnail">
+                <img src="Thumbnail.jpg" class="thumbnail">
             </div>
             <div class="product-info">
                 <p>
@@ -56,7 +56,7 @@
         </div>
         <div class="product-preview">
             <div class="thumbnail-row">
-                <img src="New folder/Thumbnail 6.jpg" class="thumbnail">
+                <img src="Thumbnail.jpg" class="thumbnail">
             </div>
             <div class="product-info">
                 <p>
@@ -68,7 +68,7 @@
     <div class="product-grid">
         <div class="product-preview">
             <div class="thumbnail-row">
-                <img src="New folder/Thumbnail 6.jpg" class="thumbnail">
+                <img src="Thumbnail.jpg" class="thumbnail">
             </div>
             <div class="product-info">
                 <p>
@@ -78,7 +78,7 @@
         </div>
         <div class="product-preview">
             <div class="thumbnail-row">
-                <img src="New folder/Thumbnail 6.jpg" class="thumbnail">
+                <img src="Thumbnail.jpg" class="thumbnail">
             </div>
             <div class="product-info">
                 <p>
@@ -88,7 +88,7 @@
         </div>
         <div class="product-preview">
             <div class="thumbnail-row">
-                <img src="New folder/Thumbnail 6.jpg" class="thumbnail">
+                <img src="Thumbnail.jpg" class="thumbnail">
             </div>
             <div class="product-info">
                 <p>
