--- a/Resources.html
+++ b/Resources.html
@@ -27,7 +27,7 @@
                     <a href="Research.html">RESEARCH</a>
                 </li>
                 <li>
-                    <a href="Contact Us.html">CONTACT US</a>
+                    <a href="Contact.html">CONTACT US</a>
                 </li>
             </ul>
         </div>
